Small cleanup of 403 CSRF form

--- a/readthedocsext/theme/templates/errors/dashboard/403_csrf.html
+++ b/readthedocsext/theme/templates/errors/dashboard/403_csrf.html
@@ -14,8 +14,7 @@
   <p>
     {% blocktrans trimmed %}
       This may be because your session has expired, or there was a problem with the form submission.
-      Please try logging in again.
+      Please try resubmitting the form or logging in again.
     {% endblocktrans %}
   </p>
-  {{ block.super }}
 {% endblock error_content_help %}
